# istatcelldata

./: .gitignore  404.html  CHANGELOG.md  README.md  _OLD.toml  automate_mkdocs.py  docs_generator.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  release.sh  requirements.txt  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: auto-tag-from-pyproject.yml  changelog.yml  ci.yml  docs.yml  gen-docs.yml  python-publish.yml  release.yml
LICENSE/: index.html
census_istat/: config.py  download.py  generic.py  manage_data.py
census_istat/data/: census_1991_2001.py  manage_data.py
census_istat/geodata/: manage_geodata.py
demo_data/: R02_DatiCPA_1991.csv  R02_DatiCPA_1991.xls  demo_data.gpkg  demo_data.qgz
demo_data/census_2011/data/Sezioni di Censimento/: R14_indicatori_2011_sezioni.csv
demo_data/download/: download.qgz
demo_data/raw_2021/: R02_indicatori_2021_sezioni.xlsx  TRACCIATO FILE REGIONALI.xlsx
docs/: index.md  mkdocs.yml
docs/docs/: index.md
docs/docs/documentation/: data.md  download.md  generic.md  geodata.md  intro.md  processes.md
docs/docs/tutorial/: intro.md
docs/documentation/: data.md  download.md  generic.md  geodata.md  intro.md  process.md  processes.md  utils.md
docs/en/: index.md
docs/en/documentation/: data.md  download.md  geodata.md  intro.md  process.md  release.md  utils.md
docs/en/tutorial/: intro.md
docs/it/: LICENSE.md  index.md
docs/it/documentation/: data.md  download.md  geodata.md  intro.md  process.md  release.md  utils.md
docs/it/tutorial/: intro.md
docs/source/: conf.py  data.rst  documentation.rst  download.rst  generic.rst  geodata.rst  index.rst  note.rst
docs/tutorial/: c_processamento.ipynb  intro.md  test.ipynb
documentation/data/: index.html
documentation/download/: index.html
documentation/generic/: index.html
documentation/geodata/: index.html
documentation/intro/: index.html
documentation/process/: index.html
documentation/processes/: index.html
documentation/utils/: index.html
istat_census_data/: __init__.py  config.py  data.py  download.py  geodata.py  logger_config.py  utils.py
istat_census_data/census1991/: __init__.py  download.py  process.py  utils.py
istat_census_data/census2001/: __init__.py  download.py
istat_census_data/census2011/: __init__.py  download.py
istat_census_data/census2021/: __init__.py  download.py  utils.py
istat_census_data/executor/: __init__.py  download.py  preprocess.py  process.py
istatcelldata/: __init__.py  config.py  data.py  download.py  generic.py  geodata.py  logger_config.py  processes.py  utils.py
istatcelldata/census1991/: config.py  download.py  process.py  utils.py
istatcelldata/census2001/: config.py  download.py
istatcelldata/census2011/: config.py  download.py
istatcelldata/census2021/: config.py  download.py  utils.py
istatcelldata/data/: census _2021.py  census_1991_2001.py  manage_data.py
istatcelldata/executor/: download.py  preprocess.py  process.py
istatcelldata/geodata/: h3.py  h3_hexagons.py  manage_geodata.py
it/: index.html
it/LICENSE/: index.html
it/documentation/data/: index.html
it/documentation/download/: index.html
it/documentation/geodata/: index.html
it/documentation/intro/: index.html
it/documentation/process/: index.html
it/documentation/utils/: index.html
it/tutorial/intro/: index.html
notebooks/: test.ipynb
notebooks/tracciato/: note.txt  tracciato.ipynb  tracciato_1991.ipynb
notebooks/tutorial/: a_download.ipynb  b_preprocessamento.ipynb  c_processamento.ipynb
scripts/: 0_process_all.py  1_download_raw_data.py  2_process_raw_data.py  3_process_data.py  a_download_data.py  a_download_raw_data.py  b_process_data.py  b_process_raw_data.py  c_process_data.py
search/: search_index.json
test/: download.py  generic.py  manage_data.py  processes.py  test_data.py  test_download.py  test_geodata.py  test_import_alias.py  test_logger_config.py  test_utils.py
test/census1991/: download.py  test_data.py  test_download.py  test_geodata.py  test_process.py  test_utils.py
test/census2001/: test_data.py  test_download.py  test_geodata.py  test_process.py
test/census2011/: test_data.py  test_download.py  test_geodata.py
test/census2021/: test_data.py  test_download.py  test_geodata.py  test_utils.py
test/data/: census_1991_2001.py  manage_data.py  test_census _2021.py  test_census_1991_2001.py  test_manage_data.py
test/executor/: test_download.py  test_preprocess.py  test_process.py
test/geodata/: h3.py  h3_hexagons.py  manage_geodata.py
tutorial/intro/: index.html
tutorial/test/: index.html
(+109 files in other folders)
