[tool.poetry]
name = "istatcelldata"
version = "1.2.0"
description = "Con ISTAT Cell Data puoi ottenere facilmente il set di dati riferiti ai censimenti ISTAT in cui sono stati rilasciati anche i dati delle celle censuarie."
authors = ["Massimiliano Moraca <gis.massimilianomoraca@gmail.com>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
tqdm = "^4.66.5"
chardet = "^5.2.0"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
jupyter = "^1.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.25"
mknotebooks = "^0.8.0"
pygments = "^2.18.0"
mkdocstrings-python = "^1.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
