[tool.poetry]
name = "istatcelldata"
version = "1.3.0"
description = "Python package to download and process ISTAT census grid cell data for Italian population censuses (1991-2021)"
authors = ["Massimiliano Moraca <gis.massimilianomoraca@gmail.com>"]
readme = "README.md"
license = "MIT"
include = ["LICENSE"]
homepage = "https://maxdragonheart.github.io/istatcelldata/"
repository = "https://github.com/MaxDragonheart/istatcelldata"
documentation = "https://maxdragonheart.github.io/istatcelldata/"
keywords = ["istat", "census", "gis", "geospatial", "italy", "demographics", "population"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Natural Language :: Italian",
]

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
tqdm = "^4.66.5"
chardet = "^5.2.0"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
jupyter = "^1.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.25"
mknotebooks = "^0.8.0"
pygments = "^2.18.0"
mkdocstrings-python = "^1.10.3"
mkdocs-static-i18n = "^1.2.0"
beautifulsoup4 = "^4.14.3"
rpds-py = "^0.30.0"
tinycss2 = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=istatcelldata --cov-report=html --cov-report=term-missing"
markers = [
    "download: marks tests that perform real network downloads (deselect with '-m \"not download\"')"
]

[tool.coverage.run]
source = ["istatcelldata"]
omit = ["*/test/*", "*/tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["N999"]  # Allow non-standard module names in standalone scripts

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
